# firefly-launcher

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  firefly.toml
src/: apps.rs  badges_scene.rs  boards_scene.rs  button_group.rs  catalog_scene.rs  components.rs  delete_scene.rs  formatting.rs  info_scene.rs  input.rs  list.rs  list_scene.rs  main.rs  notifs.rs  scores_scene.rs  scroll.rs  state.rs  stats_scene.rs  translations.rs  utils.rs
