[package]
name = "firefly-launcher"
version = "0.8.2"
rust-version = "1.91.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.13.2", features = ["talc", "sudo"] }
firefly-types = "0.9.0"
postcard = { version = "1.1.3", default-features = false }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Enable link-time optimization
