[package]
name = "firefly-launcher"
version = "0.8.3"
rust-version = "1.95.0"
edition = "2024"

[dependencies]
firefly-rust = { version = "0.15.0", features = ["talc"] }
firefly-sudo = { version = "0.14.4", features = ["alloc"] }
firefly-ui = "0.3.2"
firefly-types = "0.12.0"
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "s" # Optimize for speed.
lto = true      # Enable link-time optimization
